fix emoji vertical align

--- a/src/components/Markup.scss
+++ b/src/components/Markup.scss
@@ -193,7 +193,7 @@
 .markup .emoji {
   height: 1.572em;
   width: 1.572em;
-  vertical-align: -0.4em;
+  vertical-align: -0.5em;
   cursor: pointer;
   object-fit: contain;
 }
